[gd_scene load_steps=12 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Themes/MenuTheme.tres" type="Theme" id=2]
[ext_resource path="res://Themes/CURSE CASUAL.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Themes/ImpactFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Sprites/UI/ConfirmButton.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/MoveKeys.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/TitleSplash.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI/TitleBackdrop.png" type="Texture" id=8]
[ext_resource path="res://Music/Celeste_Chapter1B.mp3" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 49
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -24.0
autoplay = true

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 43.0
margin_top = 23.613
margin_right = 291.0
margin_bottom = 167.613
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_constants/separation = 19
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="VBoxContainer"]
margin_top = 6.0
margin_right = 248.0
margin_bottom = 63.0
focus_neighbour_bottom = NodePath("../Quit")
custom_fonts/font = SubResource( 1 )
text = " Play!"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 82.0
margin_right = 248.0
margin_bottom = 138.0
focus_neighbour_top = NodePath("../Play")
custom_fonts/font = SubResource( 2 )
text = " Quit :c"

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -414.207
margin_top = -61.5729
margin_right = -274.207
margin_bottom = -15.5729
custom_fonts/font = ExtResource( 4 )
text = "Confirm"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Label"]
margin_left = 105.02
margin_top = -13.4885
margin_right = 361.02
margin_bottom = 242.511
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 5 )

[node name="Label2" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -213.286
margin_top = -61.5729
margin_right = -73.2865
margin_bottom = -15.5729
custom_fonts/font = ExtResource( 4 )
text = "Move"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Label2"]
margin_left = 106.143
margin_top = -50.5297
margin_right = 362.143
margin_bottom = 205.47
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 74.1624
margin_top = 52.9731
margin_right = 940.162
margin_bottom = 79.9731
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="VBoxContainer/Play" to="." method="_on_Play_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/Play" to="." method="_on_Play_focus_exited"]
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="focus_entered" from="VBoxContainer/Quit" to="." method="_on_Quit_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/Quit" to="." method="_on_Quit_focus_exited"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
